<resources>
    <string name="app_name">To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">Hello 1 fragment</string>
    <string name="to_update">to update</string>
    <string name="to_add">to add</string>
    <string name="button">Button</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="plus">+</string>
    <string name="add_data">Add data</string>
    <string name="update_data">Update data</string>
    <string name="all_data">all data</string>
    <string name="input_number">number</string>
    <string name="input_text">text</string>
</resources>