<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/first_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/update_p_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar">

            <ImageView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:src="@drawable/logo_todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:layout_below="@id/main_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30sp"
                    android:fontFamily="@font/star_killers_first"
                    android:gravity="center"
                    android:text="@string/update_data"
                    android:textColor="@color/toolbar"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/for_number_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginEnd="20sp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/border_color_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_number"
                    android:maxLength="9"
                    android:inputType="number"
                    android:textColor="@color/toolbar"
                    android:padding="20sp"
                    android:textSize="25sp"
                    tools:ignore="LabelFor,TextFields"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/for_text_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/for_number_update"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20sp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/border_color_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_text"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:layout_gravity="top|start"
                    android:minLines="5"
                    android:padding="20sp"
                    android:textColor="@color/toolbar"
                    android:textSize="20sp"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/setTimeButton"
                    style="@style/ButtonStyleForAdd"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_below="@id/for_text_update"
                    android:layout_marginStart="@dimen/_20sp"
                    android:layout_marginTop="30sp"
                    android:text="Set Time" />

                <TextView
                    android:id="@+id/selectedTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/for_text_update"
                    android:layout_marginStart="140sp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/item_text_background"
                    android:paddingBottom="15sp"
                    android:paddingVertical="15sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:text="Selected Time: "
                    android:textColor="@color/toolbar"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"/>

                <Button
                    android:id="@+id/update_button"
                    style="@style/ButtonStyleForAdd"
                    android:layout_width="200sp"
                    android:layout_height="60sp"
                    android:layout_below="@+id/setTimeButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="60sp"
                    android:layout_marginTop="30sp"
                    android:fontFamily="@font/star_killers_first"
                    android:gravity="center"
                    android:text="@string/update_data"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_toolbar_inside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/toolbar">


            <ImageButton
                android:id="@+id/home"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/back_hand_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>